# Gold-Scalping-New

./: .gitignore  CHANGELOG.md  CODEBASE_AUDIT_REPORT.md  COMPREHENSIVE_REVIEW.md  DEEP_CODE_REVIEW.md  ENHANCED_LOGGING_GUIDE.md  ENHANCEMENT_COMPLETE.md  ENHANCEMENT_PROGRESS.md  FINAL_ANALYSIS.md  FINAL_CODEBASE_REVIEW.md  FIXES_APPLIED.md  FRESHNESS_ISSUE_ANALYSIS.md  INTEGRATION_FIXES_COMPLETE.md  LOG_ANALYSIS.md  MANIFEST.in  NEXUS_UPGRADE_GUIDE.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v5.6.0.md  REVIEW.md  SESSION_SUMMARY.md  TRADER_DASHBOARD_STATUS.md  VERSION.txt  VPS_DEPLOYMENT.md  backtest.py  check_syntax.py  cleanup.ps1  cleanup_workspace.py  code_cleanup_script.py  copy_to_vps.bat  project_structure_final.dot  pyproject.toml  requirements.txt  run_bot.py  setup.py  start_bot.bat  start_fresh.py  test_syntax.py  validate_oracle.py
backtest_results/: backtest_20260106_155021.json
config/: model_config.json  settings.yaml
data/: market_memory.db-shm  market_memory.db-wal  position_state.json
monitoring/: explain_bucket_close.py  live_run_monitor.py  mt5_deal_attribution.py  start_bot_24h.ps1
src/: cli.py  constants.py  main_bot.py  market_data.py  position_manager.py  risk_manager.py  trading_engine.py
src/ai/: hedge_intelligence.py
src/ai_core/: contrastive_fusion.py  council.py  direction_validator.py  evolution_chamber.py  global_brain.py  oracle.py  (+17 more)
tests/: bridge_results.txt  calibrate_htm.py  check_mt5.py  verify_deep_fixes.py  verify_fixes.py  verify_hedge_intelligence.py  verify_htm_physics.py  verify_mt5_bridge.py  verify_output.txt
(+10 files in other folders)
